# dscribe

./: .gitignore  README.md  pyproject.toml
src/dscribe/: main.py
src/dscribe/api/: routes.py  server.py
src/dscribe/core/: config.py
src/dscribe/handlers/: audio.py
src/dscribe/static/dscribe/: package-lock.json  package.json
src/dscribe/static/dscribe/src/: App.tsx
src/dscribe/webrtc/: routes.py
